# gpr300-sp24-alexander-bianca

./: CMakeLists.txt
assignments/PBR/: CMakeLists.txt  main.cpp
assignments/PBR/assets/: PBR.frag
assignments/WorkSession0/: CMakeLists.txt  main.cpp
assignments/WorkSession0/assets/worksession0-assets/: lit.frag  lit.vert
assignments/WorkSession1/: CMakeLists.txt  main.cpp
assignments/WorkSession1/assets/worksession1-assets/: lit.frag  lit.vert
assignments/WorkSession2/: CMakeLists.txt  main.cpp
assignments/WorkSession2/assets/worksession2-assets/: lit.frag  lit.vert
assignments/WorkSession3/: CMakeLists.txt  main.cpp
assignments/WorkSession3/assets/: geometry.frag  geometry.vert  lightVisibility.frag  lightVisibility.vert  lightVolume.frag  lightVolume.vert  lit.frag  lit.vert  shaderPass.frag  shaderPass.vert
assignments/assignment0/: main.cpp
assignments/assignment0/assets/: lit.frag  lit.vert
assignments/assignment1/: CMakeLists.txt  main.cpp
assignments/assignment1/assets/: blur.frag  boxblur.frag  chromematic.frag  edgeDetection.frag  filmgrain.frag  fog.frag  fullscreen.frag  greyscalefullscreen.frag  hdr.frag  inversefullscreen.frag  inversefullscreen.vert  lendisortion.frag  lendisortion.vert  sharp.frag  vignette.frag
assignments/assignment2/: main.cpp
assignments/assignment2/assets/: blinnphong.frag  blinnphong.vert  shadowPass.vert
core/: CMakeLists.txt
core/ab/: framebuffer.cpp  framebuffer.h
core/ew/: model.cpp  texture.cpp
